# IFOPTMinGW

./: README.md
IFOPT Example/include/: problem.hpp
IFOPT Example/src/: problem.cpp
Linear Programming/: CMakeLists.txt
Linear Programming/app/: main.cpp
Linear Programming/include/: problem.hpp
Linear Programming/src/: problem.cpp
